fix qodana comments